--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Brawler' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>Git Puns. Yea, we gonna git them all!</title>
     <meta name="description" content="Funny Git Puns. You know you want to hear these.">
     <meta name="author" content="Gaurav Mali">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 id="coming-soon" class="coming">Git Puns</h1>
-    <h2>This site will display the largest collection of shameless Git Puns ever.</h2>
-    <h3>We haven't really started yet, but we are gonna git around to doing it</h3>
+    <a class="github" href="https://github.com/GMali/Gitpuns/tree/gh-pages"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+    <a class="logo" href="index.html"><img alt="Git Puns" src="logo.jpg" /></a>
+    <h1>This site will display the largest collection of shameless Git Puns ever.</h1>
+    <h2>We haven't really started yet, but we are gonna git around to doing it</h2>
   </body>
 </html>
