--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
     <a class="logo" href="index.html"><img alt="Git Puns" src="logo.jpg" /></a>
     <h1>This site will display the largest collection of shameless Git Puns ever.</h1>
     <h2>We haven't really started yet, but we are gonna git around to doing it</h2>
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-34510070-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
